welcome.lessons.welcome.bat.bool2.TwoAsOne.scala.error
twoAsOne:2: error: ambiguous reference to overloaded definition,
both method + in class Int of type (x: Char)Int
and  method + in class Int of type (x: Byte)Int
match expected type ?
  if (a+b=c | a+c=b | b+c=a){
       ^twoAsOne:2: error: ambiguous reference to overloaded definition,
both method | in class Int of type (x: Char)Int
and  method | in class Int of type (x: Byte)Int
match expected type ?
  if (a+b=c | a+c=b | b+c=a){
            ^twoAsOne:2: error: ambiguous reference to overloaded definition,
both method | in class Int of type (x: Char)Int
and  method | in class Int of type (x: Byte)Int
match expected type ?
  if (a+b=c | a+c=b | b+c=a){
                    ^